--- a/style.css
+++ b/style.css
@@ -1,10 +1,8 @@
 /* Variables */
 :root {
-  --font-family: "Roboto", sans-serf;
   --normal-font: 400;
   --bold-font: 700;
   --bolder-font: 900;
-  --bg-color: #fcfcfc;
   --primary-color: aliceblue;
   --secondary-color: rgb(41, 39, 39);
   --transparent-secondary-color: rgba(41, 39, 39, 0.5);
@@ -12,7 +10,7 @@
   --secondary-shadow: #a17a69;
   --bottom-margin: 1rem;
   --bottom-margin-2: 2rem;
-  --bottom-margin-3: 4rem;
+  --bottom-margin-3: 300px;
   --line-height: 1.7rem;
   --transition: 0.3s;
   /* my variables */
@@ -20,6 +18,8 @@
   --vertical-margin: 80px;
   --height-of-projects: 300px;
   --width-of-project-description: 40%;
+  --nav-bg-color: rgb(66, 64, 71);
+  --nav-bar-height: 55px;
 }
 /* Variables end */
 
@@ -42,9 +42,11 @@ body {
 section {
     width: 100vw;
     display: flex;
-    justify-content: center;
+    /* justify-content: center; */
     gap: 1rem;
-    margin-bottom: var(--bottom-margin-3);
+    padding-bottom: var(--bottom-margin-3);
+    /* padding-top: calc(var(--nav-bar-height)*1.5); */
+    min-height: calc(100vh - var(--nav-bar-height));
 }
 
 .sectionTitle {
@@ -70,27 +72,99 @@ a:hover, a:active {
     cursor: pointer;
 }
 
-#photo {
-    max-width: 300px;
-    min-width: 100px;
+/* navbar */
+
+nav a:link, nav a:visited {
+    transition: var(--transition);
+    background-color: var(--nav-bg-color);
+    color: var(--primary-color);
 }
 
-/* #photoNameTitle{
-    margin-bottom: var(--vertical-margin);
-} */
+nav a.viewed {
+    color: aqua;
+}
+
+nav a:hover, nav a:active {
+    background-color: var(--nav-bg-color);
+    color: rgb(247, 162, 5);
+    cursor: pointer;
+}
+
+
+
+.nav-Title {
+    font-size: 2rem;
+    min-width: 16rem;
+}
+
+
+ul {
+  list-style-type: none;
+}
+
+nav {
+  position: sticky;
+  width: 100%;
+  height: var(--nav-bar-height);
+  top: 0;
+  left: 0;
+  z-index: 3;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 1rem 2rem;
+  background-color: var(--nav-bg-color);
+  box-shadow: 0 3px 5px rgba(0, 0, 0, 0.1);
+}
+
+nav h1 {
+  color: var(--primary-color);
+}
+
+nav ul {
+  display: flex;
+  gap: 1.9rem;
+}
+
+nav ul li {
+  font-weight: var(--bold-font);
+}
+
+.burger-menu {
+  color: var(--primary-color);
+  font-size: 2rem;
+  border: 0;
+  background-color: transparent;
+  cursor: pointer;
+  display: none;
+}
+
+/* navbar end */
 
 #nameTitle {
-    font-size: 3.25rem;
+    /* margin-top: 50px; */
+    font-size: 5rem;
     font-weight: var(--bolder-font);
-    max-width: 600px;
+    justify-content: center;
+    align-items: center;
+    padding-bottom: 200px;
+    /* max-width: 800px; */
+}
+
+.nameTitleContainer div {
+    color: var(--primary-color);
+}
+
+.nameTitleContainer {
     display: flex;
     flex-direction: column;
-    align-items: center;
-    justify-content: center;
 }
 
 #title {
-    padding-left: 50px;
+    padding-left: 70px;
+    color: var(--secondary-color);
+    text-shadow: -1px -1px 0 var(--primary-color), 1px -1px 0 var(--primary-color), -1px 1px 0 var(--primary-color), 1px 1px 0 var(--primary-color);
+    font-size: 6rem;
 }
 
 #aboutInfo {
@@ -101,6 +175,7 @@ a:hover, a:active {
 #about {
     flex-direction: column;
     align-items: center;
+    justify-content: flex-start;
 }
 
 #techIcons {
@@ -164,10 +239,6 @@ a:hover, a:active {
     height: var(--height-of-projects);
 }
 
-.spacer {
-    height: var(--height-of-projects);
-}
-
 /* Animations */
 
 #nameTitle div div {
@@ -219,7 +290,9 @@ a:hover, a:active {
 #contact {
     flex-direction: column;
     align-items: center;
+    justify-content: center;
     gap: 0px;
+    padding-bottom: 0px;
 }
 
 #contact .sectionTitle {
@@ -271,3 +344,4 @@ a:hover, a:active {
     background-color: var(--tertiary-color);
     cursor: pointer;
 }
+
