--- a/style.css
+++ b/style.css
@@ -320,7 +320,14 @@ nav ul li {
   }
 }
 
+/* blog section */
 
+#blog {
+    flex-direction: column;
+    align-items: center;
+    gap: 0px;
+    padding-bottom: 0px;
+}
 
 /* contact section */
 
